Fix font fallbacks, fix scale on mobiles

--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@ body {
 	--elements-background-darker: rgba(0,0,0,0.5);
 	--elements-background-lighter: rgba(1,1,1,0.5);
 	color: var(--text-color);
-	font-family: "Cantarell";
+	font-family: "Cantarell", "Roboto", "Helvetica", "Verdana", sans-serif;
 	font-size: 1.0em;
 	height: 100vh;
 	overflow: hidden;
@@ -48,7 +48,7 @@ h5 {font-size: 1.4rem;}
 h6 {font-size: 1.2rem;}
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: "Cantarell Light";
+	font-weight: 400;
 	padding-bottom: 0.8em;
 }
 
@@ -165,7 +165,7 @@ body>nav menu a {
 }
 
 body>nav menu i.fa {
-	margin-right: 1ch;
+	margin-right: 0.6ch;
 }
 
 body>nav>menu menu {
